Footer z-index issue solved

--- a/effects.css
+++ b/effects.css
@@ -101,12 +101,12 @@
 
 .loader {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background: linear-gradient(aqua, #fff, aqua);
-  animation: spin 1.7s linear infinite;
-  -webkit-animation: spin 1.7s linear infinite;
+  animation: spin 1.2s linear infinite;
+  -webkit-animation: spin 1.2s linear infinite;
 }
 
 #nav-link1 {
