--- a/parallax.css
+++ b/parallax.css
@@ -7,7 +7,8 @@
   height: 200vh;
 }
 
-.content-article h1 {
+.content-article h1,
+#stack h1 {
   font-size: 1.65rem;
 }
 
@@ -111,6 +112,11 @@ article strong {
   top: 49%;
   margin-top: -125px;
   z-index: 3;
+  transition: transform 0.1s ease;
+  -webkit-transition: transform 0.1s ease;
+  -moz-transition: transform 0.1s ease;
+  -ms-transition: transform 0.1s ease;
+  -o-transition: transform 0.1s ease;
 }
 
 .logo-small {
@@ -126,6 +132,11 @@ article strong {
   -moz-transform: translateY(65%);
   -ms-transform: translateY(65%);
   -o-transform: translateY(65%);
+  transition: transform 0.1s ease;
+  -webkit-transition: transform 0.1s ease;
+  -moz-transition: transform 0.1s ease;
+  -ms-transition: transform 0.1s ease;
+  -o-transition: transform 0.1s ease;
 }
 
 .moon {
@@ -141,6 +152,11 @@ article strong {
   -moz-transition: margin ease-in;
   -ms-transition: margin ease-in;
   -o-transition: margin ease-in;
+  transition: transform 0.1s ease;
+  -webkit-transition: transform 0.1s ease;
+  -moz-transition: transform 0.1s ease;
+  -ms-transition: transform 0.1s ease;
+  -o-transition: transform 0.1s ease;
 }
 
 .uranus {
@@ -162,6 +178,11 @@ article strong {
   left: 45%;
   top: 14%;
   z-index: 2;
+  transition: transform 0.1s ease;
+  -webkit-transition: transform 0.1s ease;
+  -moz-transition: transform 0.1s ease;
+  -ms-transition: transform 0.1s ease;
+  -o-transition: transform 0.1s ease;
 }
 
 .rose {
@@ -184,11 +205,11 @@ article strong {
   left: 70%;
   top: 30%;
   z-index: 1;
-  transition: margin ease-in-out;
-  -webkit-transition: margin ease-in-out;
-  -moz-transition: margin ease-in-out;
-  -ms-transition: margin ease-in-out;
-  -o-transition: margin ease-in-out;
+  transition: transform 0.01s ease;
+  -webkit-transition: transform 0.01s ease;
+  -moz-transition: transform 0.01s ease;
+  -ms-transition: transform 0.01s ease;
+  -o-transition: transform 0.01s ease;
 }
 
 .ufo2 {
@@ -215,7 +236,7 @@ article strong {
 
 .parallax2 {
   position: relative;
-  height: 430px;
+  height: 70vh;
   background-image: url("images/backgrounds/stars-sky.png");
   background-size: cover;
   position: bottom center;
@@ -223,7 +244,6 @@ article strong {
   background-attachment: fixed;
   overflow: hidden;
   z-index: 3;
-  margin-bottom: 270px;
   box-shadow: 0 0 5px rgba(33, 156, 243, 0.5), 0 0 10px rgba(33, 156, 243, 0.5),
     0 0 20px rgba(33, 156, 243, 0.5), 0 0 40px rgba(33, 156, 243, 0.5);
 }
@@ -262,6 +282,11 @@ article strong {
   left: -60%;
   bottom: 1%;
   z-index: 3;
+  transition: transform 0.001s ease;
+  -webkit-transition: transform 0.001s ease;
+  -moz-transition: transform 0.001s ease;
+  -ms-transition: transform 0.001s ease;
+  -o-transition: transform 0.001s ease;
 }
 
 .kid-running {
@@ -271,9 +296,14 @@ article strong {
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
-  left: -70%;
+  left: -75%;
   bottom: 0%;
   z-index: 2;
+  transition: transform 0.001s ease;
+  -webkit-transition: transform 0.001s ease;
+  -moz-transition: transform 0.001s ease;
+  -ms-transition: transform 0.001s ease;
+  -o-transition: transform 0.001s ease;
 }
 
 .moon2 {
@@ -284,7 +314,7 @@ article strong {
   background-position: top left;
   position: absolute;
   left: 45%;
-  top: 0%;
+  top: 8%;
   transition: margin ease-in-out;
   -webkit-transition: margin ease-in-out;
   -moz-transition: margin ease-in-out;
